Generate sun, moon icons and hour texts within SVG - Additional fix of Chrome preview background text visibility

--- a/www/roman-sunclock.css
+++ b/www/roman-sunclock.css
@@ -8,6 +8,7 @@ body {
     --secondary-color: lightgrey;
     --day-color: white;
     --night-color: grey;
+    --now-color: red;
     display: flex;
     flex-direction: column;
     background-color: var(--background-color);
@@ -34,7 +35,7 @@ body {
     backface-visibility: hidden;
     border: .2rem solid var(--secondary-color);
     padding: 4rem;
-    height: 48rem;
+    height: 50rem;
     width: min(80vw, 34rem);
     position: absolute;
     transition: transform 1s;
@@ -52,9 +53,14 @@ body {
 }
 
 .RomanSunclock__Container--back .RomanSunclock__Description {
-    visibility: hidden;
+    color: transparent;
+    transition: color 1s;
 }
 
+.RomanSunclock__Container--back .RomanSunclock__Version {
+    color: transparent;
+    transition: color 1s;
+}
 
 .RomanSunclock--flipped .RomanSunclock__Container--front {
     transform: rotateY(-180deg);
@@ -65,11 +71,25 @@ body {
 }
 
 .RomanSunclock--flipped .RomanSunclock__Container--back .RomanSunclock__Description {
-    visibility: visible;
+    color: var(--main-color);
+}
+
+.RomanSunclock--flipped .RomanSunclock__Container--back .RomanSunclock__Version {
+    color: var(--secondary-color);
+}
+
+.RomanSunclock__Container__Content {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .RomanSunclock--loading .RomanSunclock__LoadingDetails {
     display: block;
+}
+
+.RomanSunclock--loading .RomanSunclock__Details {
+    display: none;
 }
 
 .RomanSunclock__LoadingDetails {
@@ -83,71 +103,26 @@ body {
     justify-content: center;
 }
 
-.RomanSunclock--loading .RomanSunclock__Details {
-    display: none;
-}
-
-.RomanSunclock__Clock {
-    margin: 3rem 0 2rem 0;
-    position: relative;
-    display: flex;
-    justify-content: center;
-}
-
-.RomanSunclock__Clock__Image {
-    height: 30rem;
-    width: 30rem;
-}
-
-.RomanSunclock__Clock__Image svg {
-    height: 30rem;
-    width: 30rem;
-}
-
-
-.RomanSunclock__Clock__Hours {
-    position: absolute;
-    height: 30rem;
-    width: 30rem;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.RomanSunclock__Clock__RomanTime,
 .RomanSunclock__Description {
-    color: var(--main-color);
-}
-
-.RomanSunclock__Description p {
     font-size: 2.7rem;
     margin: 0 0 3rem 0;
 }
 
-.RomanSunclock__Clock__LocalTime {
-    color: var(--secondary-color);
+.RomanSunclock__ClockImage {
+    height: 30rem;
+    width: 30rem;
+    margin: 3rem 0 2rem 0;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
 }
 
-.RomanSunclock__DayOrNight {
-    width: 6rem;
-    height: 6rem;
-    margin: 1rem;
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-.RomanSunclock__DayOrNight--day {
-    background-image: url("8666699_sun_icon.svg");
-}
-
-.RomanSunclock__DayOrNight--night {
-    background-image: url("9025743_moon_icon.svg");
+.RomanSunclock__ClockImage svg {
+    height: 30rem;
+    width: 30rem;
 }
 
 .RomanSunclock__Version {
-    color: var(--secondary-color);
     font-size: 2rem;
     text-align: center;
 }
@@ -180,13 +155,5 @@ body {
         --main-color: white;
         --secondary-color: grey;
         --night-color: grey;
-    }
-
-    .RomanSunclock__DayOrNight--day {
-        background-image: url("8666699_sun_icon-white.svg");
-    }
-
-    .RomanSunclock__DayOrNight--night {
-        background-image: url("9025743_moon_icon-white.svg");
     }
 }
